Fixed some overlapping on the solutions index

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -149,6 +149,7 @@ h1, h2, h3, h4 {
   text-shadow: 2px 2px #fff;
 }
 h1 {
+  line-height: 1em;
   font-size: 2.4em; }
 h2 {
   font-size: 1.8em; }
